# Tesis

./: .gitignore  README.md  index.rst  tesis.code-workspace
CrearDatabaseImages/: README.md  script.py
TegraTX2/: README.md
darknetMod/: Makefile  bad.list  darknet
darknetMod/examples/: darknet.c  detector.c
darknetMod/src/: _parser..swp  image.c  parser.c  yolo_layer.c
multiplexV2/: multiplexV2.py  picamFast.py
openCV/: README.md  ej1.py
openCV/Instalar en Tegra TX2 + Cuda/: README.md
openCV/canny/: pruebaCanny.py
openCV/facedetectC++/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  facedetect
openCV/facedetectC++/faceTegra/: CMakeCache.txt  Makefile  (+5 more)
openCV/opencv-Benchmark/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json  main.py
openCV/opencv-Benchmark/opencv-bench/: downloads.xml  install.sh  results-definition.xml  test-definition.xml
openCV/opencv-Benchmark/src/: contours2.cpp  discrete_fourier_transform.cpp  edge.cpp  morphology_2.cpp  smoothing.cpp
openCV/stitching/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  stitching  stitching.cpp
socket/: cliente.py  cliente2.py  server  server.c  server2.c
tesisv4/raspberry/: ivport.py  multiplexV2.py  picamfast.py  picamfastMod.py  prueba.py  prueba2.py  prueba3.py  selectCamera.py  stitching  tesisDrgRasp.py  test.py  test2.py
tesisv4/tegra/: bad.list  detector.py  dibujar.py  hiloColav3Tegra.py  hilosColaTegra.py  scriptBorra.sh  stit.py  tesisDrgTegra.py
unionImagenes/: prueba1.py  union.py
(+3 files in other folders)
